Fix RSVP decline message and task switcher height bug

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,6 +26,8 @@ import logoImg from "../assets/logo.webp";
     width: 100%;
     top: 0;
     z-index: 100;
+    contain: layout style;
+    transform: translateZ(0);
   }
 
   .logo-img {
