Fix language switcher state bug and improve Arabic font

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,7 @@ if (lang === "en") {
 }
 ---
 
-<header class="app-header" transition:persist>
+<header class="app-header">
   <div class="header-content">
     <Image
       src={logoImg}
